--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "grunt":"0.4.2",
     "grunt-contrib-jshint": "0.1.1",
     "grunt-contrib-watch": "0.5.3",
-    "grunt-contrib-compress": "0.5.3"
+    "grunt-contrib-compress": "0.5.3",
+    "grunt-contrib-nodeunit": "0.2.2"
   }
 }
