--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
     "url": "git://github.com/salesforce-demos/node-visualforce.git"
   },
   "dependencies":{
-    "archiver": "0.4.10",
-    "lazystream": "0.1.0"
+    "archiver": "~0.4.10",
+    "lazystream": "~0.1.0"
   },
   "devDependencies": {
-    "grunt":"0.4.2",
-    "grunt-contrib-jshint": "0.1.1",
-    "grunt-contrib-watch": "0.5.3",
-    "grunt-contrib-nodeunit": "0.2.2"
+    "grunt":"~0.4.2",
+    "grunt-contrib-jshint": "~0.1.1",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-nodeunit": "~0.2.2"
   },
   "peerDependencies": {
-    "grunt": "0.4.2"
+    "grunt": "~0.4.2"
   }
 }
