--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "type": "git",
     "url": "git://github.com/salesforce-demos/node-visualforce.git"
   },
-  "dependencies":{
+  "dependencies": {
     "archiver": "~0.4.10",
-    "lazystream": "~0.1.0"
+    "lazystream": "~0.1.0",
+    "decompress-zip": "0.0.6"
   },
   "devDependencies": {
-    "grunt":"~0.4.2",
+    "grunt": "~0.4.2",
     "grunt-contrib-jshint": "~0.1.1",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-nodeunit": "~0.2.2"
